baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_generic_forwarding/baml_tests__compiles__json_to_from_string_generic_forwarding__04_5_mir.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
=== MIR2 ===
fn user.fetch_as(s: string) -> void {
    // Locals:
    let _0: void // _0 // return
    let _1: string // s // param
    let _2: type

    bb0: {
        _2 = load_type(#0);
        _0 = call const fn baml.json.from_string<copy _2>(copy _1) -> [bb1];
    }

    bb1: {
        return;
    }
}
