baml_language/crates/baml_tests/snapshots/compiles/json_to_from_string_generic_forwarding/baml_tests__compiles__json_to_from_string_generic_forwarding__06_codegen.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
function user.fetch_as(s: string) -> unknown {
    load_type #0
    load_var s
    call baml.json.from_string
    return
}
